@@ -1,7 +1,7 @@
 Package: aquamet
 Type: Package
 Title: Calculate NRSA and NLA physical habitat metrics
-Version: 2.5.8
+Version: 2.5.9
 Date: 2024-01-22
 Author: Karen Blocksom
 Depends:
